[tool.poetry]
name = "pnc6"
version = "0.1.0"
description = "PNC scripts recovered from pnc2 and pnc3"
authors = ["Chris Axline <caxline@phys.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.9.3"
qutip = "^4.7.0"
matplotlib = "^3.6.2"
lmfit = "^1.1.0"
h5py = "^3.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"
pylint = "^2.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
